# confluence-agentic-rag

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml
src/confluence_agentic_rag/: cli.py  config.py  main.py
src/confluence_agentic_rag/agent/: orchestrator.py  router.py
src/confluence_agentic_rag/llm/: base.py  stub.py
src/confluence_agentic_rag/retrieval/: chunking.py  rerank.py
src/confluence_agentic_rag/tools/: confluence_client.py  confluence_rag_tool.py
src/ingest/: ingest_confluence.py
src/vectorstore/: schema.py  weaviate_store.py
tests/: test_smoke.py
